Fix content canvas on small screens

--- a/src/sass/components/_site-header.scss
+++ b/src/sass/components/_site-header.scss
@@ -1,3 +1,4 @@
 .header-main__inner {
   position: relative;
+  padding-inline: var(--size-5);
 }
